--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,16 +4,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <TextView
-            android:id="@+id/tv_content"
+    <fragment
+            android:name="com.lxs.fastclick.MainFragment"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:text="德玛西亚"
-            android:textColor="@color/colorAccent"
-            android:gravity="center"
-            android:textSize="18sp"
-    />
+            android:layout_height="match_parent"
+            android:id="@+id/fragment"/>
 </android.support.constraint.ConstraintLayout>
